--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ AR / EN
 <!-- SPACER -->
 <section class="section-spacer"></section>
 
-<!-- CTA -->
+<!-- CTa -->
 <section class="py-32 px-6 text-center">
 <h3 class="text-5xl font-black mb-12 reveal" data-i18n="cta.title"></h3>
 
