--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@ display=swap" rel="stylesheet">
 
 <body>
 
+<!-- ================= BACKGROUND VIDEO (ADDED) ================= -->
+<video autoplay muted loop playsinline id="bg-video">
+  <!-- 🔥 PUT YOUR VIDEO PATH HERE -->
+  <source src="assets/videos/video4.mp4" type="video/mp4">
+</video>
+<!-- ============================================================ -->
+
 <!-- Language Toggle -->
 <button
 id="langToggle"
@@ -55,7 +62,7 @@ AR / EN
 </section>
 
 <!-- WHY -->
-<section class="py-32 bg-black px-6 text-center">
+<section class="py-32 px-6 text-center">
 <h3 class="text-4xl font-black reveal" data-i18n="why.title"></h3>
 <p class="text-zinc-400 reveal max-w-3xl mx-auto" data-i18n="why.text"></p>
 </section>
@@ -118,7 +125,7 @@ AR / EN
 <!-- SPACER -->
 <section class="section-spacer"></section>
 
-<!-- CTa -->
+<!-- CTA -->
 <section class="py-32 px-6 text-center">
 <h3 class="text-5xl font-black mb-12 reveal" data-i18n="cta.title"></h3>
 
